heart/include/hrt/hrt_scene.h

struct hrt_output;
struct hrt_scene_root {
    struct wlr_scene_tree *background;
    struct wlr_scene_tree *bottom;
    struct wlr_scene_tree *normal;
    struct wlr_scene_tree *fullscreen;
    struct wlr_scene_tree *top;
    struct wlr_scene_tree *overlay;
    // Should we store the outputs and groups associated with this?
    struct {
        struct wl_listener scene_destroy;
    } listeners;
};
struct hrt_scene_output {
    struct wlr_scene_tree *background;
    struct wlr_scene_tree *bottom;

    struct wlr_scene_tree *top;
    struct wlr_scene_tree *overlay;
};
struct hrt_scene_group {
    struct wlr_scene_tree *layers;
};
void hrt_scene_root_destroy(struct hrt_scene_root *scene_root);
struct hrt_scene_output *hrt_scene_output_create(struct hrt_scene_root *scene);
void hrt_scene_output_destroy(struct hrt_scene_output *output);
void hrt_scene_group_destroy(struct hrt_scene_group *group);
void hrt_scene_group_set_enabled(struct hrt_scene_group *group, bool enabled);