heart/include/hrt/hrt_view.h

struct hrt_view;
struct hrt_view_callbacks {
    /**
     * A new view has been created. Must call `hrt_view_init` for the
     * view to be displayed.
     **/
    view_commit_handler new_view;
    // This and the new_view_handler callback could be combined into one, as they are just
    // specializations of the view commit event, but this seems a bit cleaner and more abstract:
    //! Called whenever a mapped view's size changes
    view_commit_handler view_size_changed;
    view_mapped_handler view_mapped;
    view_mapped_handler view_unmapped;
    view_mapped_handler request_minimize;
    view_mapped_handler request_maximize;
    view_destroy_handler view_destroyed;

    view_request_fullscreen request_fullscreen;
};
struct hrt_view {
    int width, height;
    struct wlr_xdg_surface *xdg_surface;
    struct wlr_xdg_toplevel *xdg_toplevel;
    /*
      Contains the tree with the xdg surface tree
      plus decorations and that sort of thing.
     */
    struct wlr_scene_tree *scene_tree;
    struct wlr_scene_tree *xdg_scene;

    // internal state:
    struct wl_listener map;
    struct wl_listener unmap;
    struct wl_listener commit;
    struct wl_listener destroy;
    struct wl_listener new_popup;

    struct wl_listener request_maximize;
    struct wl_listener request_minimize;
    struct wl_listener request_fullscreen;

    const struct hrt_view_callbacks *callbacks;
};
void hrt_view_info(struct hrt_view *view);
/**
 * Request that this view be the given size. Returns the associated configure
 *serial.
 **/
uint32_t hrt_view_set_size(struct hrt_view *view, int width, int height);
bool hrt_view_mapped(struct hrt_view *view);
/**
 * Sets the view to the given coordinates relative to its parent.
 **/
void hrt_view_set_relative(struct hrt_view *view, int x, int y);
/**
 * Focus the given view and perform the needed tasks to make
 * it visible to the user.
 **/
void hrt_view_focus(struct hrt_view *view, struct hrt_seat *seat);
/**
 * Unfocus the given view.
 **/
void hrt_view_unfocus(struct hrt_view *view, struct hrt_seat *seat);
/**
 * Stop the given view from being displayed
 **/
void hrt_view_set_hidden(struct hrt_view *view, bool hidden);
void hrt_view_reparent(struct hrt_view *view, struct wlr_scene_tree *node);
/**
 * Request that the view be closed. This is the "nice" version
 * that is the same as clicking the close button on window decorations.
 * It does not garentee that the application actually closes, but
 * well behaved ones should.
 **/
void hrt_view_request_close(struct hrt_view *view);
/**
 * Send a configure event to the view
 **/
void hrt_view_send_configure(struct hrt_view *view);