lisp/bindings/hrt-bindings.lisp

(cl:in-package #:hrt)

;; next section imported from file build/include/hrt/hrt_input.h

(cffi:defcstruct hrt-server)

(cffi:defcstruct hrt-seat-callbacks)

(cffi:defcstruct hrt-seat
  (server (:pointer (:struct hrt-server)))
  (cursor :pointer #| (:struct wlr-cursor) |# )
  (keyboard-group :pointer #| (:struct wlr-keyboard-group) |# )
  (xcursor-manager :pointer #| (:struct wlr-xcursor-manager) |# )
  (seat :pointer #| (:struct wlr-seat) |# )
  (inputs (:struct wl-list))
  (new-input (:struct wl-listener))
  (xkb-context :pointer #| (:struct xkb-context) |# )
  (motion (:struct wl-listener))
  (motion-absolute (:struct wl-listener))
  (button (:struct wl-listener))
  (axis (:struct wl-listener))
  (frame (:struct wl-listener))
  (request-cursor (:struct wl-listener))
  (keyboard-key (:struct wl-listener))
  (keyboard-modifiers (:struct wl-listener))
  (callbacks (:pointer (:struct hrt-seat-callbacks)))
  (cursor-image (:pointer :char)))

(cffi:defcstruct hrt-keypress-info
  (keysyms :pointer #| xkb-keysym-t |# )
  (modifiers :uint32)
  (keysyms-len :size)
  (wl-key-state :int #| enum wl-keyboard-key-state |#))

(cffi:defcstruct hrt-seat-callbacks
  (button-event :pointer #| function ptr void (struct hrt_seat *, struct wlr_pointer_button_event *) |#)
  (wheel-event :pointer #| function ptr void (struct hrt_seat *, struct wlr_pointer_axis_event *) |#)
  (keyboard-keypress-event :pointer #| function ptr _Bool (struct hrt_seat *, struct hrt_keypress_info *) |#))

(cffi:defcstruct hrt-input
  (wlr-input-device :pointer #| (:struct wlr-input-device) |# )
  (seat (:pointer (:struct hrt-seat)))
  (link (:struct wl-list))
  (destroy (:struct wl-listener)))

(declaim (inline hrt-seat-reset-view-under))
(cffi:defcfun ("hrt_seat_reset_view_under" hrt-seat-reset-view-under) :void
  "Send the appropriate cursor event to the view under the
cursor."
  (seat (:pointer (:struct hrt-seat))))

(declaim (inline hrt-seat-set-cursor-img))
(cffi:defcfun ("hrt_seat_set_cursor_img" hrt-seat-set-cursor-img) :void
  "Set the seat's default cursor image to the given cursor name.

Does not take ownership of the string.

See themes section of man xcursor(3) to find where to find valid cursor
names."
  (seat (:pointer (:struct hrt-seat)))
  (img-name (:pointer :char)))

(declaim (inline hrt-seat-notify-button))
(cffi:defcfun ("hrt_seat_notify_button" hrt-seat-notify-button) :void
  (seat (:pointer (:struct hrt-seat)))
  (event :pointer #| (:struct wlr-pointer-button-event) |# ))

(declaim (inline hrt-seat-notify-axis))
(cffi:defcfun ("hrt_seat_notify_axis" hrt-seat-notify-axis) :void
  (seat (:pointer (:struct hrt-seat)))
  (event :pointer #| (:struct wlr-pointer-axis-event) |# ))

(declaim (inline hrt-seat-set-keymap))
(cffi:defcfun ("hrt_seat_set_keymap" hrt-seat-set-keymap) :void
  (seat (:pointer (:struct hrt-seat)))
  (rules :pointer #| (:struct xkb-rule-names) |# )
  (flags xkb:keymap-compile-flags #| enum xkb-keymap-compile-flags |#))

(declaim (inline hrt-seat-cursor-lx))
(cffi:defcfun ("hrt_seat_cursor_lx" hrt-seat-cursor-lx) :double
  (seat (:pointer (:struct hrt-seat))))

(declaim (inline hrt-seat-cursor-ly))
(cffi:defcfun ("hrt_seat_cursor_ly" hrt-seat-cursor-ly) :double
  (seat (:pointer (:struct hrt-seat))))

;; next section imported from file build/include/hrt/hrt_view.h

(cffi:defcstruct hrt-view)

(cffi:defctype view-destroy-handler :pointer #| function ptr void (struct hrt_view *) |#)

(cffi:defctype new-view-handler :pointer #| function ptr void (struct hrt_view *) |#)

(cffi:defctype view-mapped-handler :pointer #| function ptr void (struct hrt_view *) |#)

(cffi:defctype view-request-fullscreen :pointer #| function ptr _Bool (struct hrt_view *, struct hrt_output *, _Bool) |#)

(cffi:defcstruct hrt-view-callbacks
  (new-view new-view-handler)
  (view-mapped view-mapped-handler)
  (view-unmapped view-mapped-handler)
  (request-minimize view-mapped-handler)
  (request-maximize view-mapped-handler)
  (view-destroyed view-destroy-handler)
  (request-fullscreen view-request-fullscreen))

(cffi:defcstruct hrt-view
  (width :int)
  (height :int)
  (xdg-surface :pointer #| (:struct wlr-xdg-surface) |# )
  (xdg-toplevel :pointer #| (:struct wlr-xdg-toplevel) |# )
  (scene-tree :pointer #| (:struct wlr-scene-tree) |# )
  (map (:struct wl-listener))
  (unmap (:struct wl-listener))
  (commit (:struct wl-listener))
  (destroy (:struct wl-listener))
  (request-maximize (:struct wl-listener))
  (request-minimize (:struct wl-listener))
  (request-fullscreen (:struct wl-listener))
  (callbacks (:pointer (:struct hrt-view-callbacks))))

(declaim (inline hrt-view-init))
(cffi:defcfun ("hrt_view_init" hrt-view-init) :void
  "Fully initialize the view and place it in the given scene tree."
  (view (:pointer (:struct hrt-view)))
  (tree :pointer #| (:struct wlr-scene-tree) |# ))

(declaim (inline hrt-view-info))
(cffi:defcfun ("hrt_view_info" hrt-view-info) :void
  (view (:pointer (:struct hrt-view))))

(declaim (inline hrt-view-set-size))
(cffi:defcfun ("hrt_view_set_size" hrt-view-set-size) :uint32
  "Request that this view be the given size. Returns the associated configure
serial."
  (view (:pointer (:struct hrt-view)))
  (width :int)
  (height :int))

(declaim (inline hrt-view-mapped))
(cffi:defcfun ("hrt_view_mapped" hrt-view-mapped) :bool
  (view (:pointer (:struct hrt-view))))

(declaim (inline hrt-view-set-relative))
(cffi:defcfun ("hrt_view_set_relative" hrt-view-set-relative) :void
  "Sets the view to the given coordinates relative to its parent."
  (view (:pointer (:struct hrt-view)))
  (x :int)
  (y :int))

(declaim (inline hrt-view-focus))
(cffi:defcfun ("hrt_view_focus" hrt-view-focus) :void
  "Focus the given view and perform the needed tasks to make
it visible to the user."
  (view (:pointer (:struct hrt-view)))
  (seat (:pointer (:struct hrt-seat))))

(declaim (inline hrt-view-unfocus))
(cffi:defcfun ("hrt_view_unfocus" hrt-view-unfocus) :void
  "Unfocus the given view."
  (view (:pointer (:struct hrt-view)))
  (seat (:pointer (:struct hrt-seat))))

(declaim (inline hrt-view-set-hidden))
(cffi:defcfun ("hrt_view_set_hidden" hrt-view-set-hidden) :void
  "Stop the given view from being displayed"
  (view (:pointer (:struct hrt-view)))
  (hidden :bool))

(declaim (inline hrt-view-reparent))
(cffi:defcfun ("hrt_view_reparent" hrt-view-reparent) :void
  (view (:pointer (:struct hrt-view)))
  (node :pointer #| (:struct wlr-scene-tree) |# ))

(declaim (inline hrt-view-request-close))
(cffi:defcfun ("hrt_view_request_close" hrt-view-request-close) :void
  "Request that the view be closed. This is the \"nice\" version
that is the same as clicking the close button on window decorations.
It does not garentee that the application actually closes, but
well behaved ones should."
  (view (:pointer (:struct hrt-view))))

(declaim (inline hrt-view-send-configure))
(cffi:defcfun ("hrt_view_send_configure" hrt-view-send-configure) :void
  "Send a configure event to the view"
  (view (:pointer (:struct hrt-view))))

;; next section imported from file build/include/hrt/hrt_output.h

(cffi:defcstruct hrt-output
  (wlr-output :pointer #| (:struct wlr-output) |# )
  (server (:pointer (:struct hrt-server)))
  (scene :pointer #| (:struct hrt-scene-output) |#)
  (wlr-scene :pointer #| (:struct wlr-scene-output) |# )
  (usable-area (:struct wlr-box))
  (request-state (:struct wl-listener))
  (frame (:struct wl-listener))
  (destroy (:struct wl-listener))
  (color :float :count 4))

(cffi:defcstruct hrt-output-callbacks
  (output-added :pointer #| function ptr void (struct hrt_output *) |#)
  (output-removed :pointer #| function ptr void (struct hrt_output *) |#)
  (output-layout-changed :pointer #| function ptr void () |#))

(declaim (inline hrt-output-resolution))
(cffi:defcfun ("hrt_output_resolution" hrt-output-resolution) :void
  "Get the effective output resolution of the output that can be used to
set the width and height of views."
  (output (:pointer (:struct hrt-output)))
  (width (:pointer :int))
  (height (:pointer :int)))

(declaim (inline hrt-output-position))
(cffi:defcfun ("hrt_output_position" hrt-output-position) :void
  (output (:pointer (:struct hrt-output)))
  (x (:pointer :int))
  (y (:pointer :int)))

(declaim (inline hrt-output-name))
(cffi:defcfun ("hrt_output_name" hrt-output-name) :string
  (output (:pointer (:struct hrt-output))))

(declaim (inline hrt-output-make))
(cffi:defcfun ("hrt_output_make" hrt-output-make) :string
  (output (:pointer (:struct hrt-output))))

(declaim (inline hrt-output-model))
(cffi:defcfun ("hrt_output_model" hrt-output-model) :string
  (output (:pointer (:struct hrt-output))))

(declaim (inline hrt-output-serial))
(cffi:defcfun ("hrt_output_serial" hrt-output-serial) :string
  (output (:pointer (:struct hrt-output))))

;; next section imported from file build/include/hrt/hrt_scene.h

(cffi:defcstruct hrt-scene-root-listeners
  (scene-destroy (:struct wl-listener)))

(cffi:defcstruct hrt-scene-root
  (background :pointer #| (:struct wlr-scene-tree) |# )
  (bottom :pointer #| (:struct wlr-scene-tree) |# )
  (normal :pointer #| (:struct wlr-scene-tree) |# )
  (fullscreen :pointer #| (:struct wlr-scene-tree) |# )
  (top :pointer #| (:struct wlr-scene-tree) |# )
  (overlay :pointer #| (:struct wlr-scene-tree) |# )
  (listeners (:struct hrt-scene-root-listeners)))

(cffi:defcstruct hrt-scene-output
  (background :pointer #| (:struct wlr-scene-tree) |# )
  (bottom :pointer #| (:struct wlr-scene-tree) |# )
  (top :pointer #| (:struct wlr-scene-tree) |# )
  (overlay :pointer #| (:struct wlr-scene-tree) |# ))

(cffi:defcstruct hrt-scene-group
  (normal :pointer #| (:struct wlr-scene-tree) |# )
  (fullscreen :pointer #| (:struct wlr-scene-tree) |# ))

(cffi:defcstruct hrt-scene-fullscreen-node
  (tree :pointer #| (:struct wlr-scene-tree) |# )
  (background :pointer #| (:struct wlr-scene-rect) |# )
  (view (:pointer (:struct hrt-view))))

(declaim (inline hrt-scene-root-destroy))
(cffi:defcfun ("hrt_scene_root_destroy" hrt-scene-root-destroy) :void
  (scene-root (:pointer (:struct hrt-scene-root))))

(declaim (inline hrt-scene-output-create))
(cffi:defcfun ("hrt_scene_output_create" hrt-scene-output-create) (:pointer (:struct hrt-scene-output))
  (scene (:pointer (:struct hrt-scene-root))))

(declaim (inline hrt-scene-output-destroy))
(cffi:defcfun ("hrt_scene_output_destroy" hrt-scene-output-destroy) :void
  (output (:pointer (:struct hrt-scene-output))))

(declaim (inline hrt-scene-group-destroy))
(cffi:defcfun ("hrt_scene_group_destroy" hrt-scene-group-destroy) :void
  (group (:pointer (:struct hrt-scene-group))))

(declaim (inline hrt-scene-group-add-view))
(cffi:defcfun ("hrt_scene_group_add_view" hrt-scene-group-add-view) :void
  (group (:pointer (:struct hrt-scene-group)))
  (view (:pointer (:struct hrt-view))))

(declaim (inline hrt-scene-group-init-view))
(cffi:defcfun ("hrt_scene_group_init_view" hrt-scene-group-init-view) :void
  (group (:pointer (:struct hrt-scene-group)))
  (view (:pointer (:struct hrt-view))))

(declaim (inline hrt-scene-group-set-enabled))
(cffi:defcfun ("hrt_scene_group_set_enabled" hrt-scene-group-set-enabled) :void
  (group (:pointer (:struct hrt-scene-group)))
  (enabled :bool))

(declaim (inline hrt-scene-group-transfer))
(cffi:defcfun ("hrt_scene_group_transfer" hrt-scene-group-transfer) :void
  (source (:pointer (:struct hrt-scene-group)))
  (destination (:pointer (:struct hrt-scene-group))))

(declaim (inline hrt-scene-group-normal))
(cffi:defcfun ("hrt_scene_group_normal" hrt-scene-group-normal) :pointer #| (:struct wlr-scene-tree) |#
  (group (:pointer (:struct hrt-scene-group))))
